fixed about page alignment

--- a/src/components/imageFeature/style.css
+++ b/src/components/imageFeature/style.css
@@ -11,14 +11,14 @@
     z-index: 1;
     width: auto;
     height: 100%;
-    transform: rotate(35deg) translate(-50px, 100px);
+    transform: rotate(20deg) translate(-100px, 20px);
 }
 
 .imageFeature .card:nth-child(1) {
     z-index: 2;
     width: auto;
     height: 80%;
-    transform: translate(-0px, -60px) rotate(10deg);
+    transform: translate(20px, -0px) rotate(-10deg);
 }
 
 .imageFeature .card:nth-child(1):hover {
